--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		Belajar PWA
-	</title>
+	<title>Belajar PWA</title>
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 	<img src="images/1.jpg" class="img" alt="logo">
-	<h3>Beljar PWA</h3>
+	<h3> Belajar PWA</h3>
+		<label for="mhs-select"> Gender</label>
+			<select id="mhs-select">
+				<option value="semua"> semua</option>
+				
+			</select>
 
-	<script type="text/javascript" src="/js/jequery.min.js"></script>
+	<div id="mhs-list">
+		<h3>Data Tidak Ditemukan</h3>
+	</div>
+
+	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/main.js"></script>
 
 </body>
